using linear and V2

--- a/advent2021.cabal
+++ b/advent2021.cabal
@@ -62,4 +62,5 @@ executable advent2022
     unordered-containers,
     megaparsec,
     generic-lens,
-    data-memocombinators
+    data-memocombinators,
+    linear
